--- a/index.html
+++ b/index.html
@@ -174,8 +174,8 @@ color: inherit;
 	.translator
     {
     	position: absolute;
-		top: 10.5%;
-		right: 6.5%;
+		top: min(20vw,10vh);
+		right: min(6.5vw,3.5vh);
 		text-align: center;
 		font-size: min(3vw,1.8vh);
 
@@ -183,8 +183,8 @@ color: inherit;
     .next-btn
     {
     	position: absolute;
-    	bottom: 13%;
-    	right: 10%;
+    	bottom: min(24vw,13vh);
+    	right: min(10vw,5vh);
     	width: 9vw;
     	height: 9vw;
     }
