--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@ color: inherit;
 		background: linear-gradient(219.43deg, #EAC391 0.27%, #BE9160 83.24%);
         border-radius: min(10vw,5vh);
         font-size:  min(3vw,1.5vh);
-        
+        margin-left:min(12vw,6vh);
         letter-spacing: 0.1em;
 
 	}
