--- a/index.html
+++ b/index.html
@@ -422,7 +422,7 @@ color: inherit;
     	white-space: pre-line;
     }
 
-    .slide-01,.slide-03
+    .slide-03
     {
     	border-radius: min(4vw,2vh);
     }
@@ -462,8 +462,8 @@ color: inherit;
 <!-- Swiper -->
 <div class="row swiper-container">
 	<div class="swiper-wrapper">
-		<div class="swiper-slide">
-
+		<div class="swiper-slide" style="border-radius: min(4vw,2vh);">
+         
 			<div class="slide-01">
 
 			<img src="Polygon001.png" alt="polygon-img" class="left-polygon" />
