--- a/index.html
+++ b/index.html
@@ -429,7 +429,7 @@ color: inherit;
     .bookwrapper
     {
     	position: absolute;
-    	top: 80%;
+    	top: min(160vw,80vh);
     	display: flex;
     	flex-shrink: 0;
     	justify-content: center;
@@ -447,7 +447,7 @@ color: inherit;
     	border-radius: min(10vw,5vh);
     	letter-spacing: 0.1em;
     	font-weight: 900;
-    	font-size: min(2.2vw,1.1vh);
+    	font-size: min(2.8vw,1.4vh);
     }
    
 
@@ -606,7 +606,7 @@ For whatever reason you may be traveling, the Anastazia Luxury Suites & Rooms is
 		</div>	 
 
         </div>
-     <img src="vector.png" alt="vector" class="vector" style="height: auto;" />
+     <img src="Vector.png" alt="vector" class="vector" style="height: auto;" />
 		</div>
 
 		</div>
