--- a/index.html
+++ b/index.html
@@ -1184,7 +1184,7 @@ color: inherit;
 
             <div class="review-btn-wrap" style="flex-direction: column;align-items: center;">
                 <div class="mouse" id="mouse-anim"></div>
-                <p class="txt-anim" id="txt-anim">swipe left to view more</p>
+                <p class="txt-anim" id="txt-anim">Swipe left to view more</p>
             </div>
             
 
