--- a/index.html
+++ b/index.html
@@ -1250,19 +1250,19 @@ color: inherit;
 			 </div>
 
 			 <div class="links-container" id="links-container">
-			 	<a href="#!" class="contact-container" id="contact-container1">
+			 	<a href="tel:+30 6932214515"  class="contact-container" id="contact-container1">
 			 		<img src="https://raw.githubusercontent.com/rohit-virkud/parisis/main/phone-icon.png" alt="phone-icon" class="contact-icon" id="contact-icon1" />
 			 		<p class="contact-txt" id="contact-txt1">+30 6932214515</p>
 			 	</a>
-			 	<a href="#!" class="contact-container" id="contact-container2">
+			 	<a href="mailto:g.parisis@anastaziahotel.gr"  class="contact-container" id="contact-container2">
 			 		<img src="https://raw.githubusercontent.com/rohit-virkud/parisis/main/home-icon.png" alt="phone-icon" class="contact-icon" id="contact-icon2" />
 			 		<p class="contact-txt" id="contact-txt2">g.parisis@anastaziahotel.gr</p>
 			 	</a>
-			 	<a href="#!" class="contact-container" id="contact-container3">
+			 	<a href="https://maps.google.com/?q=Argonauton Komninon 12, 14572 Drosia Attikis"  target="_blank" class="contact-container" id="contact-container3">
 			 		<img src="https://raw.githubusercontent.com/rohit-virkud/parisis/main/location-icon.png" alt="phone-icon" class="contact-icon" id="contact-icon3" />
 			 		<p class="contact-txt" id="contact-txt3">Argonauton Komninon 12, 14572 Drosia Attikis</p>
 			 	</a>
-			 	<a href="#!" class="contact-container" id="contact-container4">
+			 	<a href="https://www.anastaziahotel.gr/" target="_blank" class="contact-container" id="contact-container4">
 			 		<img src="https://raw.githubusercontent.com/rohit-virkud/parisis/main/web-icon.png" alt="phone-icon" class="contact-icon"  id="contact-icon4" />
 			 		<p class="contact-txt" id="contact-txt4">www.anastaziahotel.gr</p>
 			 	</a>
@@ -1572,7 +1572,7 @@ For whatever reason you may be traveling, the Anastazia Luxury Suites & Rooms is
 
         document.getElementById("bounce-img").style.width = getSize(10,5);
         document.getElementById("bounce-img").style.height = getSize(10,5);
-        document.getElementById("bounce-img").style.right = getSize(13,8);
+        document.getElementById("bounce-img").style.right = getSize(12.5,8);
 
 
         document.getElementById("right-polygon").style.width = getSize(16,8);
