--- a/index.html
+++ b/index.html
@@ -1672,6 +1672,7 @@ For whatever reason you may be traveling, the Anastazia Luxury Suites & Rooms is
         document.getElementById("bookspotbtn").style.paddingRight = getSize(4,2);
         document.getElementById("bookspotbtn").style.borderRadius = getSize(10,5);
         document.getElementById("bookspotbtn").style.fontSize = getSize(2.8,1.4);
+        document.getElementById("bookspotbtn").style.zIndex = 1;
        
         document.getElementById('para').style.marginTop = getSize(10,5);
         document.getElementById('para').style.fontSize = getSize(2,1);
