--- a/index.html
+++ b/index.html
@@ -1231,7 +1231,7 @@ color: inherit;
 			<img src="https://raw.githubusercontent.com/rohit-virkud/parisis/main/Polygon001.png" alt="polygon-img" class="left-polygon" id="left-polygon"/>
 			<img src="https://raw.githubusercontent.com/rohit-virkud/parisis/main/Polygon002.png" alt="polygon-img" class="right-polygon" id="right-polygon"/>
 
-			<a href="#!" onclick="openSlide()"><img src="https://raw.githubusercontent.com/rohit-virkud/parisis/main/sharebtn.png" alt="sharebtn-img" class="share-btn" id="share-btn"/></a>
+			<img src="https://raw.githubusercontent.com/rohit-virkud/parisis/main/sharebtn.png" alt="sharebtn-img" class="share-btn" id="share-btn" onclick="openSlide()"/>
 
 			
 
