--- a/index.html
+++ b/index.html
@@ -1402,8 +1402,8 @@ For whatever reason you may be traveling, the Anastazia Luxury Suites & Rooms is
  
         <div style="width: 100%;display: flex;flex-shrink: 0;justify-content: center;margin-top: min(6vw,3vh)">
             <div class="social" id="social-third" >
-			 	<a href="https://www.facebook.com/G.EM.PARISIS" target="_blank"><img src="https://raw.githubusercontent.com/rohit-virkud/parisis/main/fb.png" alt="fb" id="fb-third" /></a>
-			 	<a href="https://www.instagram.com/georgiosparisis/" target="_blank"><img src="https://raw.githubusercontent.com/rohit-virkud/parisis/main/insta.png" alt="insta" id="insta-third" /></a>
+			 	<a href="https://www.facebook.com/anastaziahotel/" target="_blank"><img src="https://raw.githubusercontent.com/rohit-virkud/parisis/main/fb.png" alt="fb" id="fb-third" /></a>
+			 	<a href="https://www.instagram.com/anastazia_luxury_suites_spa/" target="_blank"><img src="https://raw.githubusercontent.com/rohit-virkud/parisis/main/insta.png" alt="insta" id="insta-third" /></a>
 			 </div>
 		</div>	
 
@@ -1979,7 +1979,7 @@ For whatever reason you may be traveling, the Anastazia Luxury Suites & Rooms is
            if(e===4)
            {
 
-             $(".image-03-fscreengallery").fadeIn(800,"linear")
+            $(".image-03-fscreengallery").fadeIn(800,"linear")
   		    $(".image-04-fscreengallery").fadeOut(800,"linear");
   		   
   		    $(".image-04-fs").removeClass('zoomOut');
