--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@ color: inherit;
 	.slide-01-wrapper
 	{
 		width: 100%;
+        height: auto;
 		min-height: 95%;
 		display: flex;
 		flex-shrink: 0;
