--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@ color: inherit;
 		/*padding: 5em 2em;*/
 		color: white;
 		font-family: 'Roboto', sans-serif;
+    overflow-y:scroll;
 	}
 	.slide-01,.slide-02,.slide-03
 	{
@@ -1467,7 +1468,7 @@ For whatever reason you may be traveling, the Anastazia Luxury Suites & Rooms is
 <script src='https://cdnjs.cloudflare.com/ajax/libs/Swiper/3.3.1/js/swiper.min.js'></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.8/ScrollMagic.min.js"></script>
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.8/plugins/debug.addIndicators.js"></script>
+
 
 
 
