--- a/index.html
+++ b/index.html
@@ -48,12 +48,12 @@ color: inherit;
 		/*padding: 5em 2em;*/
 		color: white;
 		font-family: 'Roboto', sans-serif;
-    overflow-y:scroll;
+    overflow-y:scroll
 	}
 	.slide-01,.slide-02,.slide-03
 	{
 		width: 100%;
-		height: 100%;
+		height: 100vh;
 		background: linear-gradient(180deg, #164877 0%, #0E3050 100%);
 		color: white;
 	}
@@ -1431,7 +1431,7 @@ For whatever reason you may be traveling, the Anastazia Luxury Suites & Rooms is
 
 
 
-<!--<div class="fscreen-gallery" style="background: black;">
+<div class="fscreen-gallery" style="background: black;">
 			<img src="https://raw.githubusercontent.com/rohit-virkud/parisis/main/closeicon.png" alt="close-icon"  class="close-icon" onclick="closegallery()"  id="close-gallery" />
 			<div class="image-01-fscreengallery">
 				<img src="https://raw.githubusercontent.com/rohit-virkud/parisis/main/slide02-img01.png" alt="img" class="image-01-fs" />
@@ -1700,7 +1700,7 @@ For whatever reason you may be traveling, the Anastazia Luxury Suites & Rooms is
         document.getElementById("insta-third").style.height = getSize(10,5);
 
         document.getElementById("vector").style.height = getHeight(50);
-        /*document.getElementById("close-gallery").style.width = getSize(5,3);
+        document.getElementById("close-gallery").style.width = getSize(5,3);
         document.getElementById("close-gallery").style.height = getSize(5,3);
 
         document.getElementById("arrow1").style.width = getSize(9,4);
@@ -1725,7 +1725,7 @@ For whatever reason you may be traveling, the Anastazia Luxury Suites & Rooms is
         document.getElementById("arrow7").style.height = getSize(9,4);
 
         document.getElementById("arrow8").style.width = getSize(9,4);
-        document.getElementById("arrow8").style.height = getSize(9,4);*/
+        document.getElementById("arrow8").style.height = getSize(9,4);
 
       
 
@@ -1801,11 +1801,11 @@ For whatever reason you may be traveling, the Anastazia Luxury Suites & Rooms is
  
   
 
-  	/*$(".fscreen-gallery").fadeOut();
+  	$(".fscreen-gallery").fadeOut();
   	$(".image-01-fscreengallery").fadeOut();
   	$(".image-02-fscreengallery").fadeOut();
   	$(".image-03-fscreengallery").fadeOut();
-  	$(".image-04-fscreengallery").fadeOut();*/
+  	$(".image-04-fscreengallery").fadeOut();
 
     
 
@@ -1837,7 +1837,7 @@ For whatever reason you may be traveling, the Anastazia Luxury Suites & Rooms is
 
   	
 
-/*
+
   	function imageOneOpen()
   	{
         $(".bookwrapper").css('opacity','0');
@@ -1996,7 +1996,6 @@ For whatever reason you may be traveling, the Anastazia Luxury Suites & Rooms is
         $(".arrow-wrapper").delay(5000).css('opacity','1');
         $(".close-icon").addClass("closeAnim").delay(1000);
   	} 
-    */
 
   	function openSlide() {
     $(".share-slide").addClass("open")
