--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ color: inherit;
 	.slide-01,.slide-02,.slide-03
 	{
 		width: 100%;
-		height: 100vh;
+		height: 100%;
 		background: linear-gradient(180deg, #164877 0%, #0E3050 100%);
 		color: white;
 	}
