--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ color: inherit;
 	{
 		width: 100%;
 		height: 100%;
-		/*background: linear-gradient(180deg, #164877 0%, #0E3050 100%);*/
+		background: linear-gradient(180deg, #164877 0%, #0E3050 100%);
 		color: white;
     
 	}
