--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ color: inherit;
 	.slide-01,.slide-02,.slide-03
 	{
 		width: 100%;
-		height: 100%;
+		height: 100vh;
 		background: linear-gradient(180deg, #164877 0%, #0E3050 100%);
 		color: white;
     
@@ -62,7 +62,7 @@ color: inherit;
 	{
 		width: 100%;
         height: auto;
-		min-height: 95%;
+		min-height: 95vh;
 		display: flex;
 		flex-shrink: 0;
 		flex-direction: column;
