--- a/index.html
+++ b/index.html
@@ -1780,7 +1780,7 @@ For whatever reason you may be traveling, the Anastazia Luxury Suites & Rooms is
        document.getElementById("slide-01").style.height = getHeight(100);
        document.getElementById("slide-01").style.height = getHeight(100);
        document.getElementById("slide-02x").style.height = getHeight(100);
-       document.getElementById("wrapper-slide-01").style.minHeight = getHeight(95);
+       document.getElementById("wrapper-slide-01").style.height = getHeight(95);
 
        
 
