--- a/index.html
+++ b/index.html
@@ -20,10 +20,12 @@
 		padding: 0;
 		box-sizing: border-box;
 
-		  scroll-behavior: smooth;
+		 
         font-family: 'Roboto', sans-serif;
 	}
-	
+	 * {
+      touch-action: manipulation;
+  }
 	a, a:hover, a:focus, a:active {
 text-decoration: none;
 color: inherit;
