--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		padding: 0;
 		box-sizing: border-box;
 
-		
+		  scroll-behavior: smooth;
         font-family: 'Roboto', sans-serif;
 	}
 	 * {
