--- a/index.html
+++ b/index.html
@@ -479,7 +479,7 @@ color: inherit;
     	display: flex;
     	flex-shrink: 0;
     	justify-content: center;
-    	width: 80%;
+    	width: 100%;
         z-index: 1;
 
     }
@@ -1229,14 +1229,10 @@ color: inherit;
 <!-- Swiper -->
 <div class="row swiper-container" id="swiper-container">
 
-
-
-
-
 	<div class="swiper-wrapper">
 		<div class="swiper-slide one" style="border-radius: min(4vw,2vh);"  >
          
-			<div class="slide-01" >
+			<div class="slide-01" style="position: relative;">
                <audio id="audio">
             <source src="https://raw.githubusercontent.com/rohit-virkud/parisis/main/intro.mpeg" type="audio/mpeg" />
           </audio>
@@ -1280,7 +1276,7 @@ color: inherit;
 			 	</a>
 			</div>
 
-            <div style="width: 100%;display: flex;flex-shrink: 0;justify-content: center;align-items: flex-end;" id="save-container"> 
+      <div style="width: 100%;display: flex;flex-shrink: 0;justify-content: center;align-items: flex-end;position: relative;" id="save-container"> 
             	<lottie-player src="https://assets1.lottiefiles.com/packages/lf20_Sc0OC3.json"  
                 background="transparent"  speed="1"  class="lottie-anim" id="lottie" onclick="play2()"   
                 loop  autoplay style="cursor: pointer;z-index: 999; stroke: black;bottom: auto;
@@ -1297,13 +1293,13 @@ color: inherit;
           </div>
       </div>
 
-        <div class="slide-02" id="slide-02x">
+        <div class="slide-02" id="slide-02x" style="position: relative;">
           <div class="slide-02-img" id="slide-02-img">
 				<img src="https://raw.githubusercontent.com/rohit-virkud/parisis/main/image02.png" alt="img" class="slide-02-img-img" />
 			</div>
-			<div class="image-spread" id="image-spread"></div>
+			<div class="image-spread" id="image-spread"  style="top:2%"></div>
 
-			<div class="reviews">
+			<div class="reviews" style="top:3%">
 				<a href="#!"><img src="https://raw.githubusercontent.com/rohit-virkud/parisis/main/logo.png" alt="insta" class="logo" id="logo-bottom" /></a>
 				<a href="https://www.tripadvisor.com.gr/Hotel_Review-g562637-d1784573-Reviews-Anastazia_Luxury_Suites_Rooms-Drossia_East_Attica_Region_Attica.html" target="_blank"><img src="https://raw.githubusercontent.com/rohit-virkud/parisis/main/Tripadvisor.png"   alt="Tripadvisor" class="review-icon" id="trip" /></a>
 			
@@ -1312,7 +1308,7 @@ color: inherit;
 		
 		
 
-            <div class="review-btn-wrap" style="flex-direction: column;align-items: center;">
+            <div class="review-btn-wrap" style="flex-direction: column;align-items: center;top:40%">
                 <div class="mouse" id="mouse-anim"></div>
                 <p class="txt-anim" id="txt-anim">Swipe left to view more</p>
             </div>
@@ -1360,7 +1356,7 @@ color: inherit;
           <!-- <p class="txt-anim" style="position: absolute;right: 8%;top: 4%;" >swipe right</p> -->
 
            
-           <div class="slide-03-container" id="slide-03-container"  >
+           <div class="slide-03-container" id="slide-03-container" style="position: relative;" >
             <div class="arrow-wrapper" style="position: absolute;right: 12%;top: 4%;display: flex;align-items: center;justify-content: center;flex-shrink:
             0;">
            <i class="fas fa-chevron-left fa-2x" ></i>
