--- a/index.html
+++ b/index.html
@@ -716,6 +716,7 @@ color: inherit;
     .swiper-wrapper,.two,.one,.swiper-slide-shadow-right
     {
     	transition: 5s all ease-out;
+      position: relative;
 
     }
 
