--- a/index.html
+++ b/index.html
@@ -244,6 +244,7 @@ color: inherit;
     {
     	display: flex;
       flex-shrink:0;
+      position: relative;
     /* justify-content: center; */
     
     width: 80%;
@@ -1358,7 +1359,7 @@ color: inherit;
 
            
            <div class="slide-03-container" id="slide-03-container" style="position: relative;" >
-            <div class="arrow-wrapper" style="position: absolute;right: 12%;top: 4%;display: flex;align-items: center;justify-content: center;flex-shrink:
+            <div class="arrow-wrapper" style="position: absolute;right: 5%;top: 2.5%;display: flex;align-items: center;justify-content: center;flex-shrink:
             0;">
            <i class="fas fa-chevron-left fa-2x" ></i>
            <p  style="margin-left: 1vw;margin-top: 0.5vw;
