--- a/index.html
+++ b/index.html
@@ -54,7 +54,8 @@ html
 		/*padding: 5em 2em;*/
 		color: white;
 		font-family: 'Roboto', sans-serif;
-    overflow-y:scroll
+    overflow-y:scroll;
+    overscroll-behavior-y: contain;
 	}
 	.slide-01,.slide-02,.slide-03
 	{
