--- a/index.html
+++ b/index.html
@@ -1359,9 +1359,9 @@ color: inherit;
 
            
            <div class="slide-03-container" id="slide-03-container" style="position: relative;" >
-            <div class="arrow-wrapper" style="position: absolute;right: 5%;top: 2.5%;display: flex;align-items: center;justify-content: center;flex-shrink:
+            <div class="arrow-wrapper" style="position: absolute;right: 5%;top: 3.5%;display: flex;align-items: center;justify-content: center;flex-shrink:
             0;">
-           <i class="fas fa-chevron-left fa-2x" ></i>
+           <i class="fas fa-chevron-left" id="fa" ></i>
            <p  style="margin-left: 1vw;margin-top: 0.5vw;
     letter-spacing: 2px;
     font-size: 2vw;
@@ -1490,7 +1490,7 @@ For whatever reason you may be traveling, the Anastazia Luxury Suites & Rooms is
 		  speed: 900,
 		  coverflow: {
 		    rotate: -100,
-		    stretch: 200,
+		    stretch: 100,
 		    depth: 1500,
 		    modifier: 1,
 		    slideShadows : true
@@ -1769,6 +1769,7 @@ For whatever reason you may be traveling, the Anastazia Luxury Suites & Rooms is
         document.getElementById("qr-img").style.height = getSize(30,20);
 
         document.getElementById("swipe-right-se-txt").style.fontSize = getSize(2,1);
+        document.getElementById("fa").style.fontSize = getSize(3,1.3);
         document.getElementById("swipe-right-se-txt").style.marginTop = getSize(0.5,0.2);
         document.getElementById("swipe-right-se-txt").style.marginLeft = getSize(1,0.5);
 
