--- a/index.html
+++ b/index.html
@@ -21,9 +21,7 @@
 		margin:0;
 		padding: 0;
 		box-sizing: border-box;
-
-		  scroll-behavior: smooth;
-        font-family: 'Roboto', sans-serif;
+    font-family: 'Roboto', sans-serif;
 	}
 	 * {
       touch-action: manipulation;
@@ -32,6 +30,7 @@
 text-decoration: none;
 color: inherit;
 }
+
 
 
 .swiper-container
@@ -1283,8 +1282,8 @@ color: inherit;
                 background="transparent"  speed="1"  class="lottie-anim" id="lottie" onclick="play2()"   
                 loop  autoplay style="cursor: pointer;z-index: 999; stroke: black;bottom: auto;
                   " ></lottie-player>
-			 	<a href="#" class="primary-btn" id="primary-btn">SAVE MY CONTACT</a>
-			 	<a href="#slide-02x" class="down-arrow bounce" id="bounce-img"> <img src="https://raw.githubusercontent.com/rohit-virkud/parisis/main/next.png"  alt="next"   /></a>
+			 	<a href="#!" class="primary-btn" id="primary-btn">SAVE MY CONTACT</a>
+			 	<a href="#!" class="down-arrow bounce" id="bounce-img"> <img src="https://raw.githubusercontent.com/rohit-virkud/parisis/main/next.png"  alt="next"   /></a>
 			</div> 	
 
 
