--- a/index.html
+++ b/index.html
@@ -1789,11 +1789,11 @@ For whatever reason you may be traveling, the Anastazia Luxury Suites & Rooms is
 
    const controller = new ScrollMagic.Controller();
 
-   const scene = new ScrollMagic.Scene({
+  /* const scene = new ScrollMagic.Scene({
      triggerElement: '.slide-02-img',
    })
    .setClassToggle('.slide-02-img-img','zoomOut')
-   .addTo(controller);
+   .addTo(controller);*/
 
 
 
