--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@ body{ scroll-behavior: smooth  }
 		justify-content: center;
 		align-items: center;
     transition: 1s transform ease-out;
+    scroll-behavior: smooth;
 	}
 	img
 	{
@@ -1789,7 +1790,6 @@ For whatever reason you may be traveling, the Anastazia Luxury Suites & Rooms is
 
     
 
-   document.querySelector('.slide-01-wrapper').scrollIntoView({behavior: 'smooth'});
    const controller = new ScrollMagic.Controller();
 
    const scene = new ScrollMagic.Scene({
