--- a/index.html
+++ b/index.html
@@ -1507,7 +1507,9 @@ For whatever reason you may be traveling, the Anastazia Luxury Suites & Rooms is
 
        /*smooth scroll*/  
 
-     
+document.querySelector('.swiper-slide').scrollIntoView({ 
+  behavior: 'smooth' 
+});
 
     
 
