--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <title>Parisis Card</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="height=device-height, 
+  width=device-width, initial-scale=1.0, 
+  minimum-scale=1.0, maximum-scale=1.0, 
+  user-scalable=no, target-densitydpi=device-dpi>
+  
 
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
