--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@ color: inherit;
 }
 
 html{ scroll-behavior: smooth  }
-
+body{
+  background-color:  #164877;
+}
 
 
 .swiper-container
@@ -1249,13 +1251,13 @@ html{ scroll-behavior: smooth  }
 
 			
 
-			<a href="#!" onclick="translator()" class="translator" id="key">GRE</a>
+			<a href="#!" onclick="translator()" class="translator" id="key">ENG</a>
 
 		 	<div class="slide-01-wrapper trans" >
 			 <div class="logo" id="logo-tag">
 			 	<img src="https://raw.githubusercontent.com/rohit-virkud/parisis/main/logo.png"  alt="logo" class="logo-img" />
 			 </div>
-			 <h1 class="headline" id="name">Georgios Parisis</h1>
+			 <h1 class="headline" id="name">ΓΕΩΡΓΙΟΣ ΠΑΡΙΣΗΣ</h1>
 			 <p class="tag" id="tag">ANASTAZIA LUXURY SUITES & SPA</p>
 
 			 <div class="social" id="social-top">
@@ -1274,7 +1276,7 @@ html{ scroll-behavior: smooth  }
 			 	</a>
 			 	<a href="https://maps.google.com/?q=Argonauton Komninon 12, 14572 Drosia Attikis"  target="_blank" class="contact-container" id="contact-container3">
 			 		<img src="https://raw.githubusercontent.com/rohit-virkud/parisis/main/location-icon.png" alt="phone-icon" class="contact-icon" id="contact-icon3" />
-			 		<p class="contact-txt" id="contact-txt3">Argonauton Komninon 12, 14572 Drosia Attikis</p>
+			 		<p class="contact-txt" id="contact-txt3">Αργοναυτών Κομνηνών 12, 14572 Δροσιά Αττικής</p>
 			 	</a>
 			 	<a href="https://www.anastaziahotel.gr/" target="_blank" class="contact-container" id="contact-container4">
 			 		<img src="https://raw.githubusercontent.com/rohit-virkud/parisis/main/web-icon.png" alt="phone-icon" class="contact-icon"  id="contact-icon4" />
@@ -1334,14 +1336,14 @@ html{ scroll-behavior: smooth  }
 				    </div>
 				   </div>  
 
-				    <div class="eng-txt" style="z-index: 2;position:absolute;margin-left:  min(30vw,15vh);" id="eng-txt" >
+				    <div class="eng-txt none" style="z-index: 2;position:absolute;margin-left:  min(30vw,15vh);" id="eng-txt" >
 					<h1 class="second-screen-h1 eng" id="second-screen-h1">Georgios Parisis</h1>
 					<a href="#!"><p class="adr-tag" id="tag-bottom">Lieutenant General e.a.Economist</p></a>
 					<a href="tel:+30 6945376731"><p class="slide02-phone-txt" id="number">+30 6945376731</p></a>
 					<a href="mailto:g.em.parisis@gmail.com"><p class="slide02-adr-txt" id="email">g.em.parisis@gmail.com</p></a>
 				    </div>
 
-				    <div class="gre-txt none" style="z-index: 2;position:absolute;" id="gre-txt">
+				    <div class="gre-txt " style="z-index: 2;position:absolute;" id="gre-txt">
 					<h1 class="second-screen-h1 gre" id="h1-gre" style="font-size:min(7vw,3vh)" >ΓΕΩΡΓΙΟΣ ΠΑΡΙΣΗΣ</h1>
 					<a href="#!"><p class="adr-tag" id="tag-gre" style="margin-top:min(1.5vw,0.8vh)">ΥΠΟΠΤΕΡΑΡΧΟΣ Ε.Α. ΟΙΚΟΝΟΜΟΛΟΓΟΣ</p></a>
 					<a href="tel:+30 6945376731"><p class="slide02-phone-txt" id="phone-gre">+30 6945376731</p></a>
@@ -1404,11 +1406,11 @@ html{ scroll-behavior: smooth  }
            </div>
 
 
-           <p class="para" id="para" >Welcome to Anastazia Luxury Suites & Spa a modern and recently renovated Hotel in the North cosmopolitan suburbs of Athens, in Drosia (borderline Drosia – Ekali). 
+           <p class="para none" id="para" >Welcome to Anastazia Luxury Suites & Spa a modern and recently renovated Hotel in the North cosmopolitan suburbs of Athens, in Drosia (borderline Drosia – Ekali). 
 
 For whatever reason you may be traveling, the Anastazia Luxury Suites & Rooms is the ideal abode for both those who visit Athens due to their professional obligations and for those who want to holiday near Athens and combine direct contact with the cultural, historical, religious and entertaining attractions but also have a sense of recreation away from the bustle of the capital's center.</p>
 
-<p class="para-gre none" id="para-gre">Καλώς Ορίσατε στο Anastazia Luxury Suites & Spa, έναν ιδανικό τόπο διαμονής για όσους επισκέπτονται την Αθήνα στα πλαίσια των επαγγελματικών τους υποχρεώσεων ή όσους θέλουν να κάνουν διακοπές κοντά στην Αθήνα και να συνδυάσουν την άμεση επαφή με τα πολιτιστικά, ιστορικά, θρησκευτικά και ψυχαγωγικά τους αξιοθέατα αλλά ταυτόχρονα να έχουν την αίσθηση της αναψυχής μακριά από την κίνηση του κέντρου της πρωτεύουσας.
+<p class="para-gre " id="para-gre">Καλώς Ορίσατε στο Anastazia Luxury Suites & Spa, έναν ιδανικό τόπο διαμονής για όσους επισκέπτονται την Αθήνα στα πλαίσια των επαγγελματικών τους υποχρεώσεων ή όσους θέλουν να κάνουν διακοπές κοντά στην Αθήνα και να συνδυάσουν την άμεση επαφή με τα πολιτιστικά, ιστορικά, θρησκευτικά και ψυχαγωγικά τους αξιοθέατα αλλά ταυτόχρονα να έχουν την αίσθηση της αναψυχής μακριά από την κίνηση του κέντρου της πρωτεύουσας.
 
 Προσφέρει σε κάθε πελάτη υπηρεσίες υψηλού επιπέδου σε πολύ προσιτές τιμές.</p>
  
@@ -1483,8 +1485,8 @@ For whatever reason you may be traveling, the Anastazia Luxury Suites & Rooms is
     /*Loader*/
     setTimeout(function() {
       $('.loader-div').fadeOut();
-       $('.slide-01-wrapper').removeClass('trans');
-
+      $('.slide-01-wrapper').removeClass('trans');
+      $(body).css("background-color","white");
       }, 2000);
 
 
