--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ color: inherit;
 
 html{ scroll-behavior: smooth  }
 body{
-  background-color:  #164877;
+  background:  #164877;
 }
 
 
@@ -1486,7 +1486,7 @@ For whatever reason you may be traveling, the Anastazia Luxury Suites & Rooms is
     setTimeout(function() {
       $('.loader-div').fadeOut();
       $('.slide-01-wrapper').removeClass('trans');
-      $(body).css("background-color","white");
+      $("body").css("background-color","white");
       }, 2000);
 
 
